doc/ll-grammar.txt
%token prolog EOF EOL semi assign reassign func identifier expr int float64 string int_val float64_val string_val if else for return curly_open curly_close par_open par_close comma chr ord len substr float2int int2float print inputf intputi inputs
%%
parse                    : prolog EOL function EOF ;
function                 : func_header curly_open EOL command EOL function
                         | ;
func_header              : func identifier par_open func_args par_close func_return_vals ;
func_args                : identifier var_type comma func_args
                         | ;
func_return_vals         : var_type
                         | par_open var_type func_return_vals_par par_close
                         | ;
func_return_vals_par     : comma var_type func_return_vals_par
                         | ;
var_type                 : int
                         | float64
                         | string ;
command                  : identifier func_or_list_of_vars EOL command
                         | is_inter_func par_open call_func par_close EOL command
                         | if statement EOL command
                         | for cycle EOL command
                         | return returned_vals EOL command
                         | curly_close ;
statement                : condition curly_open EOL command else curly_open EOL command ;
func_or_list_of_vars     : comma list_of_vars
                         | par_open call_func par_close
                         | assign assignment
                         | reassign reassignment ;
call_func                : func_calling ;
func_calling             : const_val_identifier func_calling_n
                         | ;
func_calling_n           : comma const_val_identifier func_calling_n
                         | ;
const_val_identifier     : identifier
                         | int_val
                         | float64_val
                         | string_val ;
list_of_vars             : identifier list_of_vars_n list_of_vars_op ;
list_of_vars_n           : comma identifier list_of_vars_n
                         | ;
list_of_vars_op          : assign assignment
                         | reassign reassignment ;
is_inter_func            : len
                         | ord
                         | chr
                         | substr
                         | float2int
                         | int2float
                         | print
                         | inputf
                         | intputi
                         | inputs ;
assignment               : end_of_assignment ;
reassignment             : end_of_assignment ;
end_of_assignment        : expr ;
cycle                    : cycle_list_of_assign semi condition semi end_of_cycle curly_open EOL command EOL ;
cycle_list_of_assign     : identifier cycle_list_of_assign_n assign assignment
                         | ;
cycle_list_of_assign_n   : comma identifier cycle_list_of_assign_n
                         | ;
cycle_list_of_reassign   : identifier cycle_list_of_reassign_n reassign reassignment
                         | ;
cycle_list_of_reassign_n : comma identifier cycle_list_of_reassign_n
                         | ;
end_of_cycle             : cycle_list_of_reassign ;
condition                : expr ;
returned_vals            : next_returned_val ;
next_returned_val        : comma next_returned_val
                         | ;
